--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/2d35188f5a.js" crossorigin="anonymous"></script>
     <title>Olivia Ros</title>
 </head>
 <body>
@@ -36,8 +37,8 @@
                   <h5 class="card-title">Card title</h5>
                   <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
                   <p class="card-text"><small>Last updated 3 mins ago</small></p>
+                  <button type="button" class="btn btn-outline-primary">Primary</button>
                   <button type="button" class="btn btn-primary">Primary</button>
-                  <button type="button" class="btn btn-light">Light</button>   
                 </div>
               </div>            
     </header>
@@ -45,7 +46,77 @@
     <section>
         <h2>Acerca de mí</h2>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente ullam dicta cum velit accusantium. Reiciendis accusantium, eos magnam error, sed minima officiis provident quos laboriosam quam et suscipit doloremque maxime.</p>
+        <div class="card-group">
+          <div class="card">
+            <div class="card-body">
+              <i class="fa-solid fa-camera"></i>
+              <h5 class="card-title">Fotógrafa de comida</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
+          <div class="card"> 
+            <div class="card-body">
+              <i class="fa-solid fa-bullhorn"></i>
+              <h5 class="card-title">Crítica culinaria</h5>
+              <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <i class="fa-regular fa-map"></i>
+              <h5 class="card-title">Bloggera de viajes</h5>
+              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
+            </div>
+          </div>
+        </div>
+    </section>
 
+    <section id="trabajos">
+      <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Nombre</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Correo electrónico</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Correo electrónico">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Escriba aquí su mensaje" rows="3"></textarea>
+      </div>
     </section>
       
 
