--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <div class="card-body">
               <h5 class="card-title">Asado en la Patagonia</h5>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <button type="button" class="btn btn-outline-secondary">Ver más</button>
+              <button id="button3" type="button" class="btn btn-outline-dark">Ver más</button>
             </div>
           </div>
         </div>
@@ -93,7 +93,7 @@
             <div class="card-body">
               <h5 class="card-title">Papas del fin del mundo</h5>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-              <button type="button" class="btn btn-outline-secondary">Ver más</button>
+              <button id="button3" type="button" class="btn btn-outline-dark">Ver más</button>
             </div>
           </div>
         </div>
@@ -103,7 +103,7 @@
             <div class="card-body">
               <h5 class="card-title">Salmones de Alaska</h5>
               <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-              <button type="button" class="btn btn-outline-secondary">Ver más</button>
+              <button id="button3" type="button" class="btn btn-outline-dark">Ver más</button>
             </div>
           </div>
         </div>
@@ -111,7 +111,8 @@
     </section>
 
     <!--Sección Contactame-->
-    <section>
+    <section class="contacto mt-5">
+      <h2 style="font-weight: 500;" class="display-1 text-center"><strong>Contáctame</strong></h2>
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Nombre</label>
         <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
@@ -124,7 +125,9 @@
         <label for="exampleFormControlTextarea1" class="form-label">Mensaje</label>
         <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Escriba aquí su mensaje" rows="3"></textarea>
       </div>
-      <button type="button" class="btn btn-info">Enviar</button>
+      <div style="text-align: right;">
+        <button id="button4" type="button" class="btn btn-info">Enviar</button>
+      </div>
     </section>
 
     <footer class="bg-dark text-center text-light p-4">
